--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="services">
             <div class="container">
                 <h2 class="subtitle">Nuestras Aplicaciones<span class="point">.</span></h2>
-                <p class="copy__section">Todas nuestras Apps estan diseñadas en AppCreator24.com | No somos profecionales en programacion, Tenemos un poco de experincia en desarrollo web, pero somos muy entusiastas y apacionados por aprender en el mundo de la programacion y llevar nuestras ideas y proyectos a un siguiente nivel por esas razones estamos enpezando con lo algo sencillo que es la creacion de la pagina web y nuestras apps con un poco de dedicacion, diseño y con la experiencia en Appcreator24. Te invitamos a que pruebes una de nustras Apps y nos ayudes a mejorar con tus sugerencias.</p>
+                <p class="copy__section">Todas nuestras Apps estan diseñadas en AppCreator24.com | No somos profecionales en programacion, Tenemos un poco de experincia en desarrollo web, pero somos muy entusiastas y apacionados por aprender en el mundo de la programacion y llevar nuestras ideas y proyectos a un siguiente nivel por esas razones estamos empezando con algo sencillo que es la creacion de la pagina web y nuestras apps con un poco de dedicacion, diseño y con la experiencia en Appcreator24. Te invitamos a que pruebes una de nustras Apps y nos ayudes a mejorar con tus sugerencias.</p>
 
                 <article class="container-cards">
                     <div class="card">
