--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </section>
         <section class="email container container--modifier">
             <h2 class="subtitle subtitle--modifier">Quienes somos? Te podemos ayudar.<span class="point">.</span></h2>
-            <p class="copy__section copy__section--modifier">Somos dos chicos apacionados que queremos aprender y emprender en el mundo digital, por ello decidimos sacar 7CODIGOS una micro empresa digital "no registrada aun" con el proposito de empezar con algo simple y ayudar a aquellas personas que esten en nuestro caso. | Si estas buscando ayuda para tu App o pagina Web. contactanos (TOTALMENTE GRATIS) te podriamos ayudar para tener una app o web simple y administrativa. Con la experincia que tenemos en html y ccs y en AppCreator.com podemos ayudarte a dar una mejor imagen a tu emprendimiento.</p>
+            <p class="copy__section copy__section--modifier">Somos dos chicos apacionados que queremos aprender y emprender en el mundo digital, por ello decidimos sacar 7CODIGOS una micro empresa digital "no registrada aun" con el proposito de empezar con algo simple y ayudar a aquellas personas que esten en nuestro caso. | Si estas buscando ayuda para tu App o pagina Web. contactanos (TOTALMENTE GRATIS) te podriamos ayudar para tener una app o web simple y administrativa. Con la experincia que tenemos en html y ccs y en AppCreator podemos ayudarte a dar una mejor imagen a tu emprendimiento.</p>
             <div class="check">
                 <div class="check__item">
                     <i class='bx bx-check' ></i>
