--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="services">
             <div class="container">
                 <h2 class="subtitle">Nuestras Aplicaciones<span class="point">.</span></h2>
-                <p class="copy__section">Todas nuestras Apps estan diseñadas en AppCreator24 | No somos profecionales en programacion, Tenemos un poco de experincia en desarrollo web, pero somos muy entusiastas y apacionados por aprender en el mundo de la programacion y llevar nuestras ideas y proyectos a un siguiente nivel por esas razones estamos empezando con algo sencillo que es la creacion de la pagina web y nuestras apps con un poco de dedicacion, diseño y con la experiencia en Appcreator24. Te invitamos a que pruebes una de nustras Apps y nos ayudes a mejorar con tus sugerencias.</p>
+                <p class="copy__section">Todas nuestras Apps estan diseñadas en AppCreator24 | No somos profecionales en programacion, Tenemos un poco de experiencia en desarrollo web, pero somos muy entusiastas y apacionados por aprender en el mundo de la programacion y llevar nuestras ideas y proyectos a un siguiente nivel por esas razones estamos empezando con algo sencillo que es la creacion de la pagina web y nuestras apps con un poco de dedicacion, diseño y con la experiencia en Appcreator24. Te invitamos a que pruebes una de nustras Apps y nos ayudes a mejorar con tus sugerencias.</p>
 
                 <article class="container-cards">
                     <div class="card">
@@ -73,7 +73,7 @@
         </section>
         <section class="email container container--modifier">
             <h2 class="subtitle subtitle--modifier">Quienes somos? Te podemos ayudar.<span class="point">.</span></h2>
-            <p class="copy__section copy__section--modifier">Somos dos chicos apacionados que queremos aprender y emprender en el mundo digital, por ello decidimos sacar 7CODIGOS una micro empresa digital "no registrada aun" con el proposito de empezar con algo simple y ayudar a aquellas personas que esten en nuestro caso. | Si estas buscando ayuda para tu App o pagina Web. contactanos (TOTALMENTE GRATIS) te podriamos ayudar para tener una app o web simple y administrativa. Con la experiencia que tenemos en html y css y en AppCreator, podemos ayudarte a dar una mejor imagen a tu emprendimiento.</p>
+            <p class="copy__section copy__section--modifier">Somos dos chicos apacionados que queremos aprender y emprender en el mundo digital, por ello decidimos sacar 7CODIGOS una micro empresa digital "No Registrada Aun" con el proposito de empezar con algo simple y ayudar a aquellas personas que esten en nuestro caso. | Si estas buscando ayuda para tu App o pagina Web. contactanos (TOTALMENTE GRATIS) te podriamos ayudar para tener una app o web simple y administrativa. Con la experiencia que tenemos en html y css y en AppCreator, podemos ayudarte a dar una mejor imagen a tu emprendimiento.</p>
             <div class="check">
                 <div class="check__item">
                     <i class='bx bx-check' ></i>
