--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     <div class="card">
                         <img src="img/12.jpg" class="card__img">
                         <div class="cards__text">
-                            <p class="card__list">JUEGOS GRATIS Y DIVERTIDOS</p>
-                            <h3 class="card__title">JUEGOS<span class="point">.</span></h3>
-                            <p class="card__copy">Demuestra tus abilidades de jugador movil.</p>
+                            <p class="card__list">PRUEBA TU INTELIGENCIA</p>
+                            <h3 class="card__title">QUIZEZ<span class="point">.</span></h3>
+                            <p class="card__copy">Demuestranos tu inteligencia y llega al top!!.</p>
                             <a href="https://www.appcreator24.com/app1407385" class="card__button">Descargar App</a>
                         </div>
                     </div>
