--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ G
                         <div class="cards__text">
                             <p class="card__list">APP PELICULAS</p>
                             <h3 class="card__title">PELISBIN<span class="point">.</span></h3>
-                            <p class="card__copy">Mira tus peliculas y series favoritas y sin publicidad.</p>
+                            <p class="card__copy">Mira tus peliculas favoritas sin publicidad.</p>
                             <a href="https://www.appcreator24.com/app1406497" class="card__button">Decargar App</a>
                         </div>
                     </div>
