--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <section class="services">
             <div class="container">
                 <h2 class="subtitle">Nuestras Aplicaciones<span class="point">.</span></h2>
-                <p class="copy__section">Todas nuestras Apps estan diseñadas en AppCreator24 | No somos profecionales en programacion, Tenemos un poco de experiencia en desarrollo web, pero somos muy entusiastas y apacionados por aprender en el mundo de la programacion y llevar nuestras ideas y proyectos a un siguiente nivel. Te invitamos a Descargar un de nuestras Apps y darnos sugerencias para mejorar.</p>
-G
+                <p class="copy__section">Todas nuestras Apps estan diseñadas en AppCreator24 | No somos profecionales en programacion, Tenemos un poco de experiencia en desarrollo web, pero somos muy entusiastas y apacionados por aprender en el mundo de la programacion y llevar nuestras ideas y proyectos a un siguiente nivel. Te invitamos a Descargar una de nuestras Apps || Nos gustaría que nos dieras una sugerencia para mejorar.</p>
                 <article class="container-cards">
                     <div class="card">
                         <img src="img/13.jpg" class="card__img">
