--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="services">
             <div class="container">
                 <h2 class="subtitle">Nuestras Aplicaciones<span class="point">.</span></h2>
-                <p class="copy__section">Todas nuestras Apps estan diseñadas en AppCreator24 | No somos profecionales en programación ---- Tenemos un poco de experiencia en desarrollo web. Te invitamos a Descargar una de nuestras Apps |||| Ayúdanos con tus sugerencias para mejorar.</p>
+                <p class="copy__section">Todas nuestras Apps estan diseñadas en AppCreator24 | Te invitamos a Descargar una de nuestras Apps y comentanos que tal!.</p>
                 <article class="container-cards">
                     <div class="card">
                         <img src="img/13.jpg" class="card__img">
