--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <p class="card__list">PRUEBA TU INTELIGENCIA</p>
                             <h3 class="card__title">QUIZEZ<span class="point">.</span></h3>
                             <p class="card__copy">Demuestranos tu inteligencia y llega al top!!.</p>
-                            <a href="https://www.appcreator24.com/app1407385" class="card__button">Descargar App</a>
+                            <a href="#" class="card__button">Descargar App</a>
                         </div>
                     </div>
                     <div class="card">
@@ -64,7 +64,7 @@
                             <p class="card__list">APP DOMICILIOS: LICORES BOGOTA</p>
                             <h3 class="card__title">MIDOMI<span class="point">.</span></h3>
                             <p class="card__copy">Servicio a domicilio licores valido solo para Bogota. 100% seguro y 100% efectivo. </p>
-                            <a href="https://www.appcreator24.com/app1385833" class="card__button">Descargar App</a>
+                            <a href="#" class="card__button">Descargar App</a>
                         </div>
                     </div>
                 </article>
