--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="contact">
             <div class="item__contact">
                 <i class='bx bx-copyright contact__icon' ></i>
-                <h3 class="contact__title">Victor Martinez</h3>
+                <h3 class="contact__title">2020 - 2021 @ Victor Martinez</h3>
             </div>
             <div class="item__contact">
                 <i class='bx bx-mail-send contact__icon' ></i>
