--- a/index.html
+++ b/index.html
@@ -70,28 +70,28 @@
             </div>
         </section>
         <section class="email container container--modifier">
-            <h2 class="subtitle subtitle--modifier">Quienes somos? Te podemos ayudar.<span class="point">.</span></h2>
-            <p class="copy__section copy__section--modifier">Somos dos chicos apacionados que queremos aprender y emprender en el mundo digital, por ello decidimos sacar 7CODIGOS una micro empresa digital "No Registrada Aun" con el proposito de empezar con algo simple y ayudar a aquellas personas que esten en nuestro caso. | Si estas buscando ayuda para tu App o pagina Web. contactanos (TOTALMENTE GRATIS) te podriamos ayudar para tener una app o web simple y administrativa. Con la experiencia que tenemos en html y css y en AppCreator, podemos ayudarte a dar una mejor imagen a tu emprendimiento.</p>
+            <h2 class="subtitle subtitle--modifier">METAS.<span class="point">.</span></h2>
+            <p class="copy__section copy__section--modifier">Mi meta es aprender y emprender mucho más en el mundo digital, Creando aplicaciones y páginas web no tan profecionales ni con un nivel de experiencia avanzado pero si con un propósito de satisfacer a nuestros usuarios que tengan una de nuestras Apps o que allan ingresado a uno de nuestros sitios web.</p>
             <div class="check">
                 <div class="check__item">
                     <i class='bx bx-check' ></i>
                     <div class="check__numbers">
-                        <p class="check__number">+5</p>
-                        <p class="check__copy">Proyecto Apps</p>
+                        <p class="check__number">+15 DESCARGAS</p>
+                        <p class="check__copy">META PARA ESTE AÑO ES DE 1500 DESCARGAS.</p>
                     </div>
                 </div>
                 <div class="check__item">
                     <i class='bx bx-check' ></i>
                     <div class="check__numbers">
-                        <p class="check__number">+2</p>
-                        <p class="check__copy">Proyecto Juegos</p>
+                        <p class="check__number">+2.000</p>
+                        <p class="check__copy">META PARA YOUTUBE DE SUSCRIPTORES.</p>
                     </div>
                 </div>
                 <div class="check__item">
                     <i class='bx bx-check' ></i>
                     <div class="check__numbers">
-                        <p class="check__number">+35</p>
-                        <p class="check__copy">Descargas Totales "Apps"</p>
+                        <p class="check__number">+3</p>
+                        <p class="check__copy">APLICACIONES HECHAS Y SUBIDAS A LA PLAY STORE.</p>
                     </div>
                 </div>
             </div>
