--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         <section class="container hero__main">  
             <div class="hero__textos">
-                <h1 class="title">Desarrollador Y Creador <span class="title--active">DE APLICACIONES SENCILLAS.</span></h1> 
-                <p class="copy">Nos Gustaria Que Nos Siguieras <span class="copy__active">EN YOUTUBE</span></p>
+                <h1 class="title">Desarrollador Y Creador De Apps<span class="title--active">QUIERES SABER COMO LAS HACEMOS.</span></h1> 
+                <p class="copy">Síguenos en<span class="copy__active">EN YOUTUBE</span></p>
                 <a href="https://www.youtube.com/channel/UCMaJZbxmzCiJ5br3jpuH7gQ" class="cta">CANAL DE YOUTUBE</a>
             </div>
             <img src="img/7codigos.jpg" class="mockup">
@@ -77,21 +77,21 @@
                     <i class='bx bx-check' ></i>
                     <div class="check__numbers">
                         <p class="check__number">+15 DESCARGAS</p>
-                        <p class="check__copy">META PARA ESTE AÑO ES DE 1500 DESCARGAS.</p>
+                        <p class="check__copy">TOTAL DESCARGAS.</p>
                     </div>
                 </div>
                 <div class="check__item">
                     <i class='bx bx-check' ></i>
                     <div class="check__numbers">
-                        <p class="check__number">+2.000</p>
-                        <p class="check__copy">META PARA YOUTUBE DE SUSCRIPTORES.</p>
+                        <p class="check__number">+800</p>
+                        <p class="check__copy">SUSCRIPTORES.</p>
                     </div>
                 </div>
                 <div class="check__item">
                     <i class='bx bx-check' ></i>
                     <div class="check__numbers">
                         <p class="check__number">+3</p>
-                        <p class="check__copy">APLICACIONES HECHAS Y SUBIDAS A LA PLAY STORE.</p>
+                        <p class="check__copy">APLICACIONES DESARROLLADAS.</p>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
             </div>
             <div class="item__contact item__contact--gold">
                 <i class='bx bxs-chat contact__icon contact__icon--modifier' ></i>
-                <h3 class="contact__title">Contactacto +573134253045</h3>
+                <h3 class="contact__title">3134253045</h3>
             </div>
         </div>
     </footer>
