--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         <section class="container hero__main">  
             <div class="hero__textos">
-                <h1 class="title">Desarrollador Y Creador De Apps<span class="title--active">QUIERES SABER COMO LAS HACEMOS.</span></h1> 
-                <p class="copy">Síguenos en<span class="copy__active">EN YOUTUBE</span></p>
+                <h1 class="title">Desarrollador Y Creador De Apps <span class="title--active">APRENDE UN POCO CON NOSOTROS.</span></h1> 
+                <p class="copy">Síguenos en <span class="copy__active">EN YOUTUBE</span></p>
                 <a href="https://www.youtube.com/channel/UCMaJZbxmzCiJ5br3jpuH7gQ" class="cta">CANAL DE YOUTUBE</a>
             </div>
             <img src="img/7codigos.jpg" class="mockup">
@@ -140,7 +140,7 @@
             </div>
             <div class="item__contact">
                 <i class='bx bxs-edit-location contact__icon' ></i>
-                <h3 class="contact__title">Diseño de APPS y creador de contenido</h3>
+                <h3 class="contact__title">Diseño de Apps y creador de contenido</h3>
             </div>
             <div class="item__contact item__contact--gold">
                 <i class='bx bxs-chat contact__icon contact__icon--modifier' ></i>
