--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <section class="container hero__main">  
             <div class="hero__textos">
-                <h1 class="title">Desarrollador Y Creador De Apps <span class="title--active">APRENDE UN POCO CON NOSOTROS.</span></h1> 
+                <h1 class="title">Desarrollador Y Creador De Apps y Sitios Web <span class="title--active">APRENDE UN POCO CON NOSOTROS.</span></h1> 
                 <p class="copy">Síguenos en <span class="copy__active">EN YOUTUBE</span></p>
                 <a href="https://www.youtube.com/channel/UCMaJZbxmzCiJ5br3jpuH7gQ" class="cta">CANAL DE YOUTUBE</a>
             </div>
@@ -71,7 +71,7 @@
         </section>
         <section class="email container container--modifier">
             <h2 class="subtitle subtitle--modifier">METAS.<span class="point">.</span></h2>
-            <p class="copy__section copy__section--modifier">Mi meta es aprender y emprender mucho más en el mundo digital, Creando aplicaciones y páginas web no tan profecionales ni con un nivel de experiencia avanzado pero si con un propósito de satisfacer a nuestros usuarios que tengan una de nuestras Apps o que allan ingresado a uno de nuestros sitios web.</p>
+            <p class="copy__section copy__section--modifier">Mi meta es aprender y emprender mucho más en el mundo digital, Creando aplicaciones y páginas web no tan profecionales ni con un nivel de experiencia avanzado pero si con un propósito de satisfacer a nuestros usuarios que tengan una de nuestras Apps o que hallan ingresado a uno de nuestros sitios web.</p>
             <div class="check">
                 <div class="check__item">
                     <i class='bx bx-check' ></i>
